# SJPyExp

./: CMakeLists.txt  kernelserver.py  runtrial.py  status.txt  test2.py  test3.py
SuperBuild/: External_python-ipykernel.cmake  SuperBuild.cmake
